Project

General

Profile

Actions

Bug #19541

closed

osd: deadlock setting collection bits on filestore

Added by Sage Weil about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
OSD
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-04-06T19:03:46.710 INFO:tasks.ceph.osd.0.smithi194.stderr: ceph version 12.0.0-2330-g880858b (880858be35b5b586cab1a9ca5605828c0c6de840)
2017-04-06T19:03:46.710 INFO:tasks.ceph.osd.0.smithi194.stderr: 1: (()+0xc7c072) [0x55c7a1128072]
2017-04-06T19:03:46.710 INFO:tasks.ceph.osd.0.smithi194.stderr: 2: (()+0x11390) [0x7fd23b6dd390]
2017-04-06T19:03:46.710 INFO:tasks.ceph.osd.0.smithi194.stderr: 3: (pthread_cond_wait()+0xc0) [0x7fd23b6d9360]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 4: (ObjectStore::apply_transactions(ObjectStore::Sequencer*, std::vector<ObjectStore::Transaction, std::allocator<ObjectStore::Transaction> >&, Context*)+0x2b5) [0x55c7a0ee8d95]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 5: (ObjectStore::apply_transaction(ObjectStore::Sequencer*, ObjectStore::Transaction&&, Context*)+0x5e) [0x55c7a0c17f4e]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 6: (PG::update_store_with_options()+0x2bb) [0x55c7a0c5e95b]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 7: (PG::handle_advance_map(std::shared_ptr<OSDMap const>, std::shared_ptr<OSDMap const>, std::vector<int, std::allocator<int> >&, int, std::vector<int, std::allocator<int> >&, int, PG::RecoveryCtx*)+0x4e4) [0x55c7a0c7f9a4]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 8: (OSD::advance_pg(unsigned int, PG*, ThreadPool::TPHandle&, PG::RecoveryCtx*, std::set<boost::intrusive_ptr<PG>, std::less<boost::intrusive_ptr<PG> >, std::allocator<boost::intrusive_ptr<PG> > >*)+0x2e4) [0x55c7a0bcdcc4]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 9: (OSD::process_peering_events(std::__cxx11::list<PG*, std::allocator<PG*> > const&, ThreadPool::TPHandle&)+0x1e4) [0x55c7a0bf2a44]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 10: (ThreadPool::BatchWorkQueue<PG>::_void_process(void*, ThreadPool::TPHandle&)+0x27) [0x55c7a0c37a97]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 11: (ThreadPool::worker(ThreadPool::WorkThread*)+0xf2d) [0x55c7a119071d]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 12: (ThreadPool::WorkThread::entry()+0x10) [0x55c7a1191880]
2017-04-06T19:03:46.711 INFO:tasks.ceph.osd.0.smithi194.stderr: 13: (()+0x76ba) [0x7fd23b6d36ba]
2017-04-06T19:03:46.712 INFO:tasks.ceph.osd.0.smithi194.stderr: 14: (clone()+0x6d) [0x7fd23a74a82d]
2017-04-06T19:03:46.712 INFO:tasks.ceph.osd.0.smithi194.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

/a/sage-2017-04-06_17:19:30-rados:thrash-wip-mgr-init---basic-smithi/993733
/a/sage-2017-04-06_17:19:30-rados:thrash-wip-mgr-init---basic-smithi/993685
Actions #1

Updated by Sage Weil about 7 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Kefu Chai about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF